<resources>
    <string name="app_name">TbiShop</string>
        <string name="cus_server_tel">400-1234-1234</string>
        <string name="no_more_data">没有更多数据了</string>
        <string name="sys_err_server_fail">请求失败!</string>
        <string name="cp_common_tab_layout_home">首页</string>
        <string name="cp_common_tab_layout_trip">行程</string>
        <string name="cp_common_tab_layout_order">订单</string>
        <string name="cp_common_tab_layout_my">我的</string>
        <string name="c_login_title">企业帐号登录</string>
        <string name="c_login_code_hint">请输入公司代码</string>
        <string name="p_login_title">登录</string>
        <string name="p_login_reg">注册</string>
        <string name="p_login_clogin"><u>使用企业帐号登录</u></string>
        <string name="p_login_find_pwd">忘记密码</string>
        <string name="p_register_title">注册</string>
        <string name="p_register_verify">请输入短信验证码</string>
        <string name="p_register_doc_left">同意</string>
        <string name="p_register_doc_right"><u>津旅商务会员协议</u></string>
        <string name="phone_number_err">请输入手机号并检查手机号位数</string>
        <string name="common_find_pwd_title">忘记密码</string>
        <string name="common_set_new_title">设置新密码</string>
        <string name="common_set_new_pwd_et_hit">请输入新密码</string>
        <string name="common_set_new_pwd_et_hit_new">请再次输入新密码</string>
        <string name="common_set_new_pwd_warn_pwd_err">请输入相同的密码</string>
        <string name="common_set_new_pwd_btn">完成</string>
        <string name="common_set_pwd_title">设置密码</string>
        <string name="common_set_pwd_et_hit">请输入密码</string>
        <string name="common_set_pwd_et_hit_new">请再次输入密码</string>
        <string name="p_login_username">请输入手机号</string>
        <string name="c_bind_p_title">绑定个人帐号</string>
        <string name="c_bind_p_btn">绑定</string>
        <string name="p_main_nav_airplane">机票</string>
        <string name="p_main_nav_hotel">酒店</string>
        <string name="p_main_nav_travel">旅游</string>
        <string name="p_main_nav_car">专车</string>
        <string name="p_main_nav_visa">签证</string>
        <string name="p_main_tab_p">个人出行</string>
        <string name="p_main_tab_com">公务出行</string>
        <string name="p_main_hot">热门路线</string>
        <string name="p_main_more">更多精彩</string>
        <string name="p_main_color_hotel">协议酒店</string>
        <string name="p_main_color_hotel_txt">高品质低价格</string>
        <string name="p_main_color_travel">定制旅游</string>
        <string name="p_main_color_travel_txt">享专属服务</string>
        <string name="p_main_color_airplane">特惠机票</string>
        <string name="p_main_color_airplane_txt">无捆绑销售</string>
        <string name="p_main_special_ticket">特价机票</string>
        <string name="p_main_special_ticket_txt">元起</string>
        <string name="p_main_special_ticket_sell_left">已销</string>
        <string name="p_main_special_ticket_sell_right">件</string>
        <string name="p_bind_c_title">绑定公司帐号</string>
        <string name="p_bind_c_et_com">请输入公司代码</string>
        <string name="p_bind_c_et_user">请输入用户名</string>
        <string name="p_bind_c_cp_btn">跳过</string>
        <string name="p_bind_c_tv_info">绑定公司帐号即可使用差旅服务</string>
        <string name="c_main_fragment_business_airplane_booking">商旅机票</string>
        <string name="c_main_fragment_airplane_booking_english">Business travel booking</string>
        <string name="c_main_fragment_business_airplane_hotel">商旅酒店</string>
        <string name="c_main_fragment_business_hotel">Business travel hotel</string>
        <string name="c_main_fragment_business_airplane_approval">快速审批</string>
        <string name="c_main_fragment_business_airplane_booking_english">Business travel approval</string>
        <string name="common_query_airplane_tickets">机票查询</string>
        <string name="common_query_airplane_ticket">查询</string>
        <string name="common_start_city">出发城市</string>
        <string name="common_arrive_city">到达城市</string>
        <string name="common_start_date">出发日期</string>
        <string name="common_back_date">返程日期</string>
        <string name="common_start_time">出发时间</string>
        <string name="common_back_time">返程时间</string>
        <string name="common_price_word">价格</string>
        <string name="common_time_word">时间</string>
        <string name="common_filter_word">筛选</string>
        <string name="p_hotel_query">酒店查询</string>
        <string name="p_hotel_query_city">输入城市</string>
        <string name="p_hotel_query_txt">输入关键字/酒店名/位置</string>
        <string name="common_before_day">前一天</string>
        <string name="common_after_day">后一天</string>
        <string name="common_fit_string">符合</string>
        <string name="common_across_stop">经停</string>
        <string name="common_share_string">共享</string>
        <string name="p_hotel_query_night">晚</string>
        <string name="common_hotel_type_1">协议</string>
        <string name="common_hotel_nav_price_filter">价格筛选</string>
        <string name="common_hotel_nav_star_filter">星级筛选</string>
        <string name="common_hotel_nav_star_rank">星级排序</string>
        <string name="common_hotel_nav_price_rank">价格排序</string>
        <string name="common_hotel_search_txt_start">住</string>
        <string name="common_hotel_search_txt_end">离</string>
        <string name="item_hotel_list_price_txt">起</string>
        <string name="common_input_airport_str">输入机场</string>
        <string name="select_hotel_start_date">选择入住时间</string>
        <string name="select_hotel_end_date">选择离店时间</string>
        <string name="not_fit_string">违背</string>
        <string name="c_hotel_query_company">选择分公司</string>
        <string name="c_hotel_query_num">房间数量</string>
        <string name="common_hotel_query_start">入住时间</string>
        <string name="common_hotel_query_end">离店时间</string>
        <string name="common_hotel_list_star">星</string>
        <string name="common_hotel_detail">详情</string>
        <string name="common_hotel_call">拨打</string>
        <string name="common_hotel_more">更多</string>
        <string name="hotel_invalid_date">所选日期必需是在 %1$s and %2$s.</string>
        <string name="today_chinese">今天</string>
        <string name="hotel_date_confirm_btn">确定</string>
        <string name="hotel_date_confirm_header">选择日期</string>
        <string name="common_hotel_detail_meg">酒店信息</string>
        <string name="common_hotel_reserve_total">总价： </string>
        <string name="common_hotel_reserve_start">入住: </string>
        <string name="common_hotel_reserve_end">离店: </string>
        <string name="common_hotel_reserve_guarantee">担保政策</string>
        <string name="common_hotel_reserve_sel_room">房间数</string>
        <string name="common_hotel_reserve_sel_person">入住人</string>
        <string name="common_hotel_reserve_sel_person_hint">请输入入住人姓名</string>
        <string name="common_hotel_reserve_sel_special">特殊要求</string>
        <string name="common_hotel_reserve_sel_latest">最晚到店时间</string>
        <string name="common_hotel_reserve_contact">联系人</string>
        <string name="common_hotel_reserve_contact_tel">电话号码</string>
        <string name="common_hotel_reserve_contact_hint">请输入联系人姓名</string>
        <string name="common_hotel_reserve_contact_tel_hint">请输入联系人电话号码</string>
        <string name="common_hotel_reserve_paytype">支付方式</string>
        <string name="common_hotel_reserve_personal_pay">个人支付-前台现付</string>
        <string name="common_hotel_reserve_personal_credit_card_pay">个人支付-信用卡担保</string>
        <string name="common_hotel_next">下一步</string>
        <string name="common_hotel_next_submit_order">提交订单</string>
        <string name="error_parse_time">日期访问错误</string>
        <string name="common_hotel_reserve_company_hint">输入分公司名称</string>
        <string name="common_hotel_reserve_room_name">间</string>
        <string name="common_hotel_reserve_price_average">均价</string>
        <string name="common_hotel_reserve_symbol">￥</string>
        <string name="common_hotel_reserve_sel_tv_special">无</string>
        <string name="common_hotel_credit_card_validate">请输入正确的信用卡号</string>
        <string name="common_hotel_reserve_warn_persion">请填写入住人信息</string>
        <string name="common_hotel_reserve_wanr_name">请填写联系人</string>
        <string name="common_hotel_reserve_wanr_tel">请填写联系人电话</string>
        <string name="common_hotel_reserve_warn_last">请选择最晚到店时间</string>
        <string name="common_hotel_credit_card_period">请填写信用卡有效期</string>
        <string name="common_hotel_fill_cvv_warn">请填写CVV编码</string>
        <string name="common_hotel_fill_id_number_warn">请填写有效的身份证号码</string>
        <string name="c_hotel_reserve_breach_guarantee_tv_type">价格不符!</string>
        <string name="c_hotel_reserve_warn_guarantee_tv_reason">请填写违背原因</string>
        <string name="c_hotel_reserver_warn_start_time">请填写起始时间</string>
        <string name="c_hotel_reserver_warn_end_time">请填写结束时间</string>
        <string name="c_hotel_reserver_warn_address">请填写出差地点</string>
        <string name="c_hotel_reserver_warn_object">请填写出差目的</string>
        <string name="c_hotel_reserver_warn_reason">请填写出差事由</string>
        <string name="c_hotel_reserver_warn_persion_count">有旅客尚未分配房间</string>
        <string name="c_hotel_reserver_warn_room_count">有房间尚未分配旅客</string>
        <string name="common_hotel_guarantee">担保信息</string>
        <string name="common_hotel_guarantee_credit_card">信用卡号</string>
        <string name="common_hotel_guarantee_credit_card_hint">请输入信用卡号</string>
        <string name="common_hotel_guarantee_name">持卡人姓名</string>
        <string name="common_hotel_guarantee_name_hint">请输入姓名，大写拼音，与卡面信息一致</string>
        <string name="common_hotel_guarantee_overdue">过期日期</string>
        <string name="common_hotel_guarantee_id">证件号码</string>
        <string name="common_hotel_guarantee_id_hint">请输入身份证号码</string>
        <string name="common_hotel_guarantee_cvv">CVV码</string>
        <string name="common_hotel_guarantee_cvv_hint">请输入CVV码</string>
        <string name="common_hotel_guarantee_btn">担保</string>
        <string name="common_hotel_guarantee_price">担保金额</string>
        <string name="cp_common_select_city_search">输入城市</string>
        <string name="cp_common_select_city_location">定位城市</string>
        <string name="cp_common_select_city_gv_hot">热门城市</string>
        <string name="common_accross_stop_str">经停</string>
        <string name="common_flight_details_str">航班详情</string>
        <string name="dialog_all">全部</string>
        <string name="dialog_unlimited">不限</string>
        <string name="dialog_p_hotel_300">0-300</string>
        <string name="dialog_p_hotel_350">301-350</string>
        <string name="dialog_p_hotel_800">351-800</string>
        <string name="dialog_p_hotel_warn">请输入价格区间</string>
        <string name="dialog_star_all">全部</string>
        <string name="dialog_star_5">五星</string>
        <string name="dialog_star_4">四星</string>
        <string name="dialog_star_3">三星</string>
        <string name="dialog_star_2">二星</string>
        <string name="dialog_star_1">一星</string>
        <string name="common_hotel_special">特殊要求</string>
        <string name="common_hotel_special_txt">特殊要求：您的需求会尽量转达给酒店</string>
        <string name="common_hotel_special_bed_type">床型（单选）</string>
        <string name="common_hotel_special_bed_king_size">大床</string>
        <string name="common_hotel_special_bed_double">双床</string>
        <string name="common_hotel_special_room">房间</string>
        <string name="common_hotel_special_room_window">有窗</string>
        <string name="common_hotel_special_room_smokeless">无烟</string>
        <string name="common_hotel_special_floor">楼层</string>
        <string name="common_hotel_special_floor_same">同层</string>
        <string name="common_hotel_special_floor_high">高层</string>
        <string name="common_hotel_special_special">房间特点</string>
    <string name="login">登录</string>
    <string name="password_hint">请输入密码</string>
    <string name="phone_hint">请输入手机号码</string>
</resources>