<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_from"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_bg"
    android:orientation="vertical">
    <!--<com.xinluqishi.parkingcar.base.view.compnent.CPCommonHeader-->
        <!--android:id="@+id/p_login_cp_header"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--custom:header_title="@string/p_login_title"-->
        <!--custom:btn_name="@string/p_login_reg"-->
        <!--custom:btn_visibility="true"-->
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:background="@color/white"
        android:orientation="vertical">

        <!-- 手机号 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/ll_input_height"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/spacing_medium">

            <EditText
                android:id="@+id/p_login_et_username"
                style="@style/et_common"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:tag="username"
                android:text="13821990273"/>
        </LinearLayout>

        <View
            style="@style/seg_list_line"
            android:layout_marginLeft="@dimen/spacing_medium" />
        <!-- 密码 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/ll_input_height"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/spacing_medium">

            <EditText
                android:id="@+id/p_login_et_password"
                style="@style/et_common"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:tag="password"
                android:text="1234"/>
        </LinearLayout>
    </LinearLayout>
    <!-- 提交表单 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginLeft="@dimen/spacing_medium"
        android:layout_marginRight="@dimen/spacing_medium">

        <Button
            android:id="@+id/p_login_btn_submit"
            style="@style/btn_common_large"
            android:backgroundTint="@drawable/button_selector_enable"
            android:text="@string/login" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_medium"
        >
        <TextView
            android:id="@+id/p_login_tv_c_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/base_link"
            android:text="@string/p_login_clogin" />
        <TextView
            android:id="@+id/p_login_tv_find_pwd"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/base_link"
            android:text="@string/p_login_find_pwd"/>
    </RelativeLayout>
</LinearLayout>